--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DevJane Portfolio Website</title>
+        <title>Sites by Matt</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
         
@@ -33,17 +33,17 @@
         
         <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
-                The title <strong>of my project</strong>
+                Simple, Single <strong>Landing Pages</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">short subtitle</p>
+            <p class="section__subtitle section__subtitle--intro">e-Learning Page</p>
             <img src="img/portfolio-01.jpg" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
-            <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+            <p>Single page sites should be designed for either immediate impact or communicating essentials as effectively as possible. Simple, clean, effective.</p>
             <img src="img/services-bg.jpg" alt="">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?</p>
-            <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+            <p>This landing page for an e-Learning site is was designed to capture the attention of those who are considering online learning. Thus, this site focuses on trust through statistics, a visual that defines expectations, and multiple points of call to action.</p>
+            <p>Perhaps a single, professional and impactful page is all you need to meet your specific requirements and reach your clientelle?</p>
         </div>
 
 
